Remove use of private com.sun.glass.ui.Application API.
We can use the Desktop class now instead, with the caveat that it's not
clear yet whether doing so will make Swing the default toolkit. If it
does, we can workaround later. A ticket to check this has been added to
Jira.