@@ -102,8 +102,6 @@
             </classpath>
             <compilerarg value="-Xmaxerrs"/><compilerarg value="100"/>
             <compilerarg value="-Xplugin:threadchecker.TCPlugin org.reflections"/>
-        	<!-- we use some private packages/classes currently: -->
-            <compilerarg line="--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"/>
         </compile>
     	<copy todir="${boot.build}">
     	    <fileset dir="${boot.resources}" />
